# jansmongodbkernel

./: README.md  pyproject.toml
example/: example.ipynb
jansmongodbkernel/: kernel.json
src/jansmongodbkernel/: __main__.py  install_kernelspec.py  kernel.py
